@@ -17,6 +17,7 @@
  16. New MOB class: GenRideableUndead, with Raise Undead support in prayers.
  17. New internal property: ExtraData, for attaching random data to specific objects.
  18. New common skills: Master Dyeing, and Master Lacquering
+ 19. Players >= last player level no longer gain experience.
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
